# pyexasol

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .old_travis.yml  .pre-commit-config.yaml  .travis.yml  .workflow-patcher.yml  .zizmor.yml  CHANGELOG.md  LICENSE.txt  README.md  SECURITY.md  noxconfig.py  noxfile.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blank.md  bug.md  documentation.md  feature.md  refactoring.md  security.md
.github/workflows/: build-and-publish.yml  cd.yml  check-release-tag.yml  checks-old.yml  checks.yml  ci-master.yml  ci-polars.yml  ci-pr.yml  ci.yml  dependency-update.yml  examples.yaml  examples.yml  fast-tests.yml  gh-pages-old.yml  gh-pages.yml  matrix-all.yml  matrix-exasol.yml  matrix-python.yml  matrix.yml  merge-gate-extension.yml  merge-gate.yml  performance-checks.yml  periodic-validation.yml  pr-merge.yml  report.yml  slow-checks.yml  ssl_cert.yml  test-selected-extras.yml
doc/: api.rst  conf.py  developer_guide.rst  faq.rst  index.rst  user_guide.rst
doc/changes/: changelog.md  changes_0.10.0.md  changes_0.11.0.md  changes_0.11.1.md  changes_0.11.2.md  changes_0.12.0.md  changes_0.13.0.md  changes_0.13.1.md  changes_0.14.0.md  changes_0.14.1.md  changes_0.14.2.md  changes_0.15.1.md  changes_0.16.1.md  changes_0.17.0.md  changes_0.18.0.md  changes_0.18.1.md  changes_0.19.0.md  changes_0.20.0.md  changes_0.21.0.md  changes_0.21.1.md  changes_0.21.2.md  changes_0.22.0.md  changes_0.23.0.md  changes_0.23.1.md  changes_0.23.2.md  changes_0.23.3.md  changes_0.24.0.md  changes_0.25.0.md  changes_0.25.1.md  changes_0.25.2.md  changes_0.26.0.md  changes_0.27.0.md  changes_0.7.0.md  changes_0.8.0.md  changes_0.9.1.md  changes_0.9.2.md  changes_1.0.0.md  changes_1.0.1.md  changes_1.1.0.md  changes_1.1.1.md  (+10 more)
doc/user_guide/: best_practices.rst  dbapi.rst  dbapi_compat.rst  dependencies.rst  design.md  design.rst  encryption.rst  examples.rst  getting_started.rst  http_transport.rst  http_transport_parallel.rst  index.rst  known_issues.rst  local_config.rst  parallelism.rst  performance.rst  protocol_version.rst  security.rst  snapshot_transactions.rst  sql_formatting.rst  udf_script_output.rst
docs/: BEST_PRACTICES.md  DBAPI_COMPAT.md  DEPENDENCIES.md  DESIGN.md  DEVELOPER_GUIDE.md  ENCRYPTION.md  EXAMPLES.md  HTTP_TRANSPORT.md  HTTP_TRANSPORT_PARALLEL.md  KNOWN_ISSUES.md  LOCAL_CONFIG.md  PARALLELISM.md  PERFORMANCE.md  PROTOCOL_VERSION.md  REFERENCE.md  SCRIPT_OUTPUT.md  SNAPSHOT_TRANSACTIONS.md  SQL_FORMATTING.md
examples/: 00_prepare.py  01_basic.py  02_fetch_tuple.py  03_fetch_dict.py  04_fetch_mapper.py  05_formatting.py  06_pandas.py  07_import_export.py  08_transaction.py  09_exceptions.py  0_prepare.py  10_redundancy.py  11_edge_case.py  12_db2_compat.py  13_ext.py  14_parallel_export.py  15_encryption.py  16_ujson.py  17_rapidjson.py  18_session_params.py  19_local_config.py  1_basic.py  20_parallel_import.py  21_parallel_export_import.py  22_profiling.py  23_snapshot_transaction.py  23_snapshot_transactions.py  24_script_output.py  25_overload.py  26_quote_ident.py  27_abort_query.py  28_thread_safety.py  29_dsn_parsing.py  2_fetch_tuple.py  30_http_proxy.py  31_context_manager.py  32_insert_multi.py  33_meta.py  34_http_transport_errors.py  35_garbage_collection.py  (+51 more)
examples/draft/: 01_subconnections.py  02_script_output.py
master/: .buildinfo  api.html  developer_guide.html  faq.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/.doctrees/: api.doctree  developer_guide.doctree  environment.pickle  faq.doctree  index.doctree
master/_modules/: index.html  pyexasol.html
master/_sources/: developer_guide.rst.txt
master/changes/: changelog.html  changes_0.10.0.html  changes_0.11.0.html  changes_0.11.1.html  changes_0.11.2.html  changes_0.12.0.html  changes_0.13.0.html  changes_0.13.1.html  changes_0.14.0.html  changes_0.14.1.html  changes_0.14.2.html  changes_0.15.1.html  changes_0.16.1.html  changes_0.17.0.html  changes_0.18.0.html  changes_0.18.1.html  changes_0.19.0.html  changes_0.20.0.html  changes_0.21.0.html  changes_0.21.1.html  changes_0.21.2.html  changes_0.22.0.html  changes_0.23.0.html  changes_0.23.1.html  changes_0.23.2.html  changes_0.23.3.html  changes_0.24.0.html  changes_0.25.0.html  changes_0.25.1.html  changes_0.25.2.html  changes_0.26.0.html  changes_0.27.0.html  changes_0.7.0.html  changes_0.8.0.html  changes_0.9.1.html  changes_0.9.2.html  unreleased.html
master/user_guide/: best_practices.html  dbapi.html  dependencies.html  design.html  encryption.html  examples.html  http_transport.html  http_transport_parallel.html  index.html  known_issues.html  local_config.html  parallelism.html  performance.html  protocol_version.html  snapshot_transactions.html  sql_formatting.html  udf_script_output.html
performance/: 00_prepare.py  01_pyodbc_fetch.py  02_turbodbc_fetch.py  03_pyexasol_fetch.py  04_turbodbc_pandas_numpy.py  05_turbodbc_pandas_arrow.py  06_pyexasol_pandas.py  07_pyexasol_pandas_compress.py  08_pyexasol_pandas_parallel.py  _config.py
pyexasol/: __init__.py  __main__.py  _metadata.py  callback.py  connection.py  constant.py  exceptions.py  ext.py  formatter.py  http_transport.py  local_config.py  logger.py  mapper.py  meta.py  script_output.py  statement.py  utils.py  utils_test.py  version.py  warnings.py
pyexasol/db2/: __init__.py
pyexasol_utils/: bench.py  docker_util.py  http.py  http_transport.py  script_output.py
pyexasol_utils/bench_sql/: prepare.sql  t1_group_by.sql  t2_local_join.sql  t3_global_join.sql  t4_sort.sql
scripts/: benchmark.py  generate_payments.py  generate_users.py
test/: conftest.py
test/data/: import.sql
test/integration/: a_test.py  abort_query_test.py  basic_test.py  concurrency_test.py  conftest.py  connection_http_transport_errors_test.py  connection_integration_test.py  connection_settings_test.py  connection_test.py  context_managers_tests.py  dbapi2_test.py  dsn_test.py  edge_cases_test.py  (+29 more)
tests/: test_concurrent_queries.py  test_threadsafety_peformance.py
(+131 files in other folders)
