[project]
name = "pyexasol"
version = "1.1.1"
description = "Exasol python driver with extra features"
authors = [
    {name="Vitaly Markov", email="wild.desu@gmail.com"},
    {name="Exasol AG", email="opensource@exasol.com"},
]
readme = "README.md"
license = "MIT"
keywords = [
    "exasol",
    "sql",
    "database",
    "performance",
    "websocket",
    "import",
    "export"
]
dynamic = ["classifiers"]

[project.urls]
Homepage = "https://www.exasol.com/"
Documentation = "https://github.com/exasol/pyexasol/"
Source = "https://github.com/exasol/pyexasol"
Issues = "https://github.com/exasol/pyexasol/issues"
Changelog = "https://github.com/exasol/pyexasol/blob/master/CHANGELOG.md"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "pyexasol" },
    { include = "pyexasol_utils" },
    { include = "exasol" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Database",
]

[tool.poetry.dependencies]
python = "^3.9.2"
websocket-client = ">=1.0.1"
rsa = "*"
packaging = "*"
cryptography = {version = ">=45.0.7"}
# Currently, it is necessary to pin numpy explicitly.
# For additional details, refer to: https://github.com/numpy/numpy/issues/26710
# Once this issue has been resolved, we should be able to remove this explicit dependency.
numpy = { version = ">1.26.0,<2", optional = true }
pandas = { version = "^2", optional = true, extras = ["numpy"] }
polars = { version = "^1.10", optional = true }
ujson = { version = "*", optional = true }
python-rapidjson = { version = "*", optional = true }
orjson = { version = ">=3.6", optional = true }
pproxy = { version = "*", optional = true }

[tool.poetry.extras]
numpy = ["numpy"]
pandas = ["pandas"]
polars = ["polars"]
ujson = ["ujson"]
rapidjson = ["python-rapidjson"]
orjson = ["orjson"]
examples = ["pproxy"]
all = ["numpy", "pandas", "ujson", "python-rapidjson", "orjson", "pproxy", "polars"]

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
pytest = ">=7.0.0,<9"
docutils = "^0.21.2"
exasol-integration-test-docker-environment = "^4.0.0"
faker = "^24.14.1"
exasol-toolbox = "^1.9.0"
types-ujson = "^5.10.0.20250326"

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.coverage.report]
fail_under = 15

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 6.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[[tool.mypy.overrides]]
module = [
    # pandas-stubs only for python >=3.10,<4.0.0, but we support 3.9 too
    "pandas.*",
    # no stubs available as of 2025
    "orjson.*",
    "rapidjson.*",
    "pyodbc.*",
    "turbodbc.*",
    # code we are not yet type checking
    "examples.*",
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sonar]
projectKey = "com.exasol:pyexasol"
hostUrl = "https://sonarcloud.io"
organization = "exasol"

[tool.pytest.ini_options]
xfail_strict = true
markers = [
    "smoke: smoke tests which always should pass.",
    "basic: basic driver tests.",
    "fetch_tuple: tests related to fetching tuple based results.",
    "fetch_dict: tests related to fetching dictionary based results.",
    "fetch_mapper: tests related to mapping data types.",
    "format: tests related to f-string based statement formatting.",
    "transaction: tests related to transaction management.",
    "exceptions: tests related to exceptions in pyexasol.",
    "extensions: tests related to pyexasol extensions.",
    "context_managers: tests related to pyexasol context_managers.",
    "metadata: tests related to metadata retrieval with pyexasol.",
    "json: tests related to json serialization in pyexasol.",
    "dbapi2: tests related to dbapi2 compatibility.",
    "configuration: tests related to pyexasol settings and configuration.",
    "edge_cases: tests related to pyexasol and exasol edge cases scenarios.",
    "tls: tests related to tls.",
    "udf: tests related to user defined functions.",
    "pandas: tests related to support of pandas library.",
    "polars: tests related to support of polars library.",
    "etl: etl related tests, export, load (import) and transform data.",
    "misc: miscellaneous tests which did not fit in the other categories."
]
