[project]
name = "pyexasol"
version = "2.0.0"
requires-python = ">=3.10,<3.15"
description = "Exasol python driver with extra features"
authors = [
    { name = "Vitaly Markov", email = "wild.desu@gmail.com" },
    { name = "Exasol AG", email = "opensource@exasol.com" },
]
readme = "README.md"
license = "MIT"
keywords = [
    "exasol",
    "sql",
    "database",
    "performance",
    "websocket",
    "import",
    "export"
]
dynamic = ["classifiers"]
dependencies = [
    # websocket-client was down-pinned to <1.9.0 due to tests failures.
    # This will be resolved in https://github.com/exasol/pyexasol/issues/274.
    "websocket-client>=1.0.1,<1.9.0",
    "packaging>=24.1.0,<26.0.0",
    # The cryptography package follow a  Firefox-inspired version scheme which increases
    # the major version for all feature-releases independent of breaking changes.
    # We anticipate that the stable API stays stable, and if we encounter a breaking
    # change, upstream projects can narrow the range.
    "cryptography>=45.0.7",
]

[project.optional-dependencies]
examples = ["pproxy"]
orjson = ["orjson>=3.6,<4.0"]
pandas = ["pandas>=2.0.0,<3.0.0"]
polars = ["polars>=1.10.0,<2.0.0"]
# The pyarrow package rapidly increases major version. We anticipate that the stable
# API stays stable, and if we encounter a breaking change, upstream projects can
# narrow the range.
pyarrow = ["pyarrow>=21.0.0"]
rapidjson = ["python-rapidjson>=1.21.0,<2.0.0"]
ujson = ["ujson>=5.10.0,<6.0.0"]
all = [
    "pproxy",
    "orjson>=3.6,<4.0",
    "pandas>=2.0.0,<3.0.0",
    "polars>=1.10.0,<2.0.0",
    "pyarrow>=21.0.0",
    "python-rapidjson>=1.21.0,<2.0.0",
    "ujson>=5.10.0,<6.0.0"
]

[project.urls]
Homepage = "https://www.exasol.com/"
Documentation = "https://github.com/exasol/pyexasol/"
Source = "https://github.com/exasol/pyexasol"
Issues = "https://github.com/exasol/pyexasol/issues"
Changelog = "https://github.com/exasol/pyexasol/blob/master/CHANGELOG.md"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "pyexasol" },
    { include = "pyexasol_utils" },
    { include = "exasol" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Database",
]



[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
pytest = ">=7.0.0,<9"
docutils = "^0.21.2"
exasol-integration-test-docker-environment = "^5.0.0"
faker = "^24.14.1"
exasol-toolbox = "^4.0.0"
types-ujson = "^5.10.0.20250326"
pytest-repeat = ">=0.9.4, <1.0.0"
pandas-stubs = "^2.3.3.251219"

[tool.poetry.group.performance]
optional = true

[tool.poetry.group.performance.dependencies]
# pytest-benchmark is kept separate from the other dev dependencies due to
# observed correlated issues when running other tests. For further details, see
# the `Performance Tests` section of the ``doc/user_guide/developer_guide.rst``.
pytest-benchmark = { extras = ["histogram"], version = "^5.1.0" }

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.coverage.report]
fail_under = 15

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 6.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[[tool.mypy.overrides]]
module = [
    # no stubs available as of 2025
    "orjson.*",
    "rapidjson.*",
    "pyarrow.*",
    "pyodbc.*",
    "turbodbc.*",
    # code we are not yet type checking
    "examples.*",
    "test.*"
]
ignore_errors = true
ignore_missing_imports = true

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sonar]
projectKey = "com.exasol:pyexasol"
host.url = "https://sonarcloud.io"
organization = "exasol"

[tool.pytest.ini_options]
xfail_strict = true
markers = [
    "basic: basic driver tests.",
    "configuration: tests related to pyexasol settings and configuration.",
    "context_managers: tests related to pyexasol context_managers.",
    "dbapi2: tests related to dbapi2 compatibility.",
    "edge_cases: tests related to pyexasol and exasol edge cases scenarios.",
    "etl: etl related tests, export, load (import) and transform data.",
    "exceptions: tests related to exceptions in pyexasol.",
    "extensions: tests related to pyexasol extensions.",
    "fetch_dict: tests related to fetching dictionary based results.",
    "fetch_mapper: tests related to mapping data types.",
    "fetch_tuple: tests related to fetching tuple based results.",
    "format: tests related to f-string based statement formatting.",
    "json: tests related to json serialization in pyexasol.",
    "metadata: tests related to metadata retrieval with pyexasol.",
    "misc: miscellaneous tests which did not fit in the other categories.",
    "pandas: tests related to support of pandas library.",
    "parquet: tests related to support of pyarrow.parquet library.",
    "polars: tests related to support of polars library.",
    "smoke: smoke tests which always should pass.",
    "tls: tests related to tls.",
    "transaction: tests related to transaction management.",
    "udf: tests related to user defined functions.",
]
